<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.CreerExerciceActivity"
    android:background="@drawable/wood_bc"
    android:id="@+id/layoutCreerEntrainement">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#65FFFFFF"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <TextView
            android:id="@+id/titleApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:fontFamily="@font/bowlby_one_sc"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/titleLocationApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="0dp"
            android:text="@string/editeur_d_exercice"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:fontFamily="@font/bowlby_one_sc"
            app:layout_constraintTop_toBottomOf="@id/titleApp"
            tools:layout_editor_absoluteX="20dp" />

        <TableLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:stretchColumns="1"
            app:layout_constraintTop_toBottomOf="@id/titleLocationApp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_de_l_exercice"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/exercice_nom"
                    android:layout_width="match_parent"
                    android:inputType="text" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercice_temps"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/exercice_temps"
                    android:layout_width="match_parent"
                    android:inputType="number" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repos"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/exercice_temps_repos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow>

                <Button
                    android:id="@+id/retourActivitePrecedenteButton"
                    android:background="#FFFFFF"
                    android:onClick="retourActivitePrecedente"
                    android:text="@string/retour"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/enregistrerEntrainement"
                    android:background="#FFFFFF"
                    android:onClick="enregistrerExercice"
                    android:text="@string/enregistrer"
                    android:textColor="#000000" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>