<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.MainActivity"
    android:background="@drawable/wood_bc">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#65FFFFFF"
        android:layout_margin="20dp"
        android:id="@+id/container">



        <TextView
            android:id="@+id/titleApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:fontFamily="@font/bowlby_one_sc"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/titleLocationApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="25dp"
            android:text="@string/app_location_home"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:fontFamily="@font/bowlby_one_sc"
            app:layout_constraintTop_toBottomOf="@id/titleApp"
            tools:layout_editor_absoluteX="20dp" />

        <Button
            android:id="@+id/creer_un_entrainement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:drawableLeft="@android:drawable/ic_menu_add"
            android:onClick="creerEntrainement"
            android:paddingLeft="42dp"
            android:text="@string/creer_un_entrainement"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/titleLocationApp" />

        <Button
            android:id="@+id/mes_entrainements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:drawableLeft="@android:drawable/btn_star_big_off"
            android:onClick="listeEntrainements"
            android:paddingLeft="42dp"
            android:text="@string/mes_entrainements"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/creer_un_entrainement" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>